// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TinkoffLoan desktop className 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcTinkoffLoan YpcTinkoffLoan_view_horizontal Test"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_tinkoff-loan YpcIcon_width_xl YpcIcon_height_s YpcTinkoffLoan-Icon YpcTinkoffLoan-Icon_view_horizontal"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Тинькофф кредит
    </h4>
  </div>
</article>
`;

exports[`TinkoffLoan desktop view horizontal 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcTinkoffLoan YpcTinkoffLoan_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_tinkoff-loan YpcIcon_width_xl YpcIcon_height_s YpcTinkoffLoan-Icon YpcTinkoffLoan-Icon_view_horizontal"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Тинькофф кредит
    </h4>
  </div>
</article>
`;

exports[`TinkoffLoan desktop view vertical 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcTinkoffLoan YpcTinkoffLoan_view_vertical"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_tinkoff-loan YpcIcon_width_xl YpcIcon_height_s YpcTinkoffLoan-Icon YpcTinkoffLoan-Icon_view_vertical"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Тинькофф кредит
    </h4>
  </div>
</article>
`;

exports[`TinkoffLoan touch-phone className 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcTinkoffLoan YpcTinkoffLoan_view_horizontal Test"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_tinkoff-loan YpcIcon_width_xl YpcIcon_height_s YpcTinkoffLoan-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Тинькофф кредит
    </h4>
  </div>
</article>
`;

exports[`TinkoffLoan touch-phone view horizontal 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcTinkoffLoan YpcTinkoffLoan_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_tinkoff-loan YpcIcon_width_xl YpcIcon_height_s YpcTinkoffLoan-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Тинькофф кредит
    </h4>
  </div>
</article>
`;

exports[`TinkoffLoan touch-phone view vertical 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcTinkoffLoan YpcTinkoffLoan_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_tinkoff-loan YpcIcon_width_xl YpcIcon_height_s YpcTinkoffLoan-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Тинькофф кредит
    </h4>
  </div>
</article>
`;
